Fix Rating wrapping

--- a/source/components/Rating/Rating.scss
+++ b/source/components/Rating/Rating.scss
@@ -2,6 +2,8 @@
   align-items: center;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 200px;
 
   > span {
     align-items: center;
